Bugfix/cs203 212/unable to go backwards from view events (#20)
* Added a concerts button that routes to the landing page

* Added concerts button

* Added a logout button

* Added ellipsis to prevent the email from overflowing

* refined styling for header

---------

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,12 +2,18 @@
 
 .header-container {
   margin-top: 0px;
-  height: 95px;
+  padding-right: 10px;
+  height: 80px;
   background-color: $primary-blue-1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  column-gap: 10px;
 }
-.login-grp {
-  position: absolute;
-  margin-left: 85%;
-  margin-top: 2%
-
+.login-title {
+  font-weight: bold;
+}
+.login-info-grp p {
+  margin: 0 auto;
 }
